--- a/README
+++ b/README
@@ -1,9 +1,9 @@
-#×ÔÖÆÍøÅÌÍøÒ³¶Ë
+# è‡ªåˆ¶ç½‘ç›˜ç½‘é¡µç«¯
 
-##ÅäÖÃ»·¾³
-·þÎñÆ÷£º±¾µØCentos7
-Êý¾Ý¿â£ºmariadb
-±à³ÌÓïÑÔ£ºhtml+css+js+php
+## é…ç½®çŽ¯å¢ƒ
+æœåŠ¡å™¨ï¼šæœ¬åœ°Centos7
+æ•°æ®åº“ï¼šmariadb
+ç¼–ç¨‹è¯­è¨€ï¼šhtml+css+js+php
 
-##ÆäËûËµÃ÷
-¼ÆËã»úÍøÂç×÷ÒµÖ®Ò»£¬±¾ÈËµÚÒ»´ÎÐ´ÍøÒ³£¬Ç°¶Ë½çÃæÓÐÐ©³óÂª£¬µ«¹¦ÄÜ»¹ËãÈ«Ãæ¡£
+## å…¶ä»–è¯´æ˜Ž
+è®¡ç®—æœºç½‘ç»œä½œä¸šä¹‹ä¸€ï¼Œæœ¬äººç¬¬ä¸€æ¬¡å†™ç½‘é¡µï¼Œå‰ç«¯ç•Œé¢æœ‰äº›ä¸‘é™‹ï¼Œä½†åŠŸèƒ½è¿˜ç®—å…¨é¢ã€‚
